WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145876
[EFL] Fix the debug build after
r185417
.
https://bugs.webkit.org/show_bug.cgi?id=145876
Summary
[EFL] Fix the debug build after r185417.
Hunseop Jeong
Reported
2015-06-11 01:01:57 PDT
../../Source/WebCore/platform/graphics/efl/ImageBufferEfl.cpp:65:8: error: 'MIMETypeRegistry' has not been declared EFL port build failed after
r185417
.
Attachments
Patch
(1.19 KB, patch)
2015-06-11 01:31 PDT
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
KwangHyuk
Comment 1
2015-06-11 01:14:41 PDT
According to this error, #include "MIMETypeRegistry.h" should be added, HunSeop, Could you fix this error ? However, how can it pass EWS without error ? :(
Hunseop Jeong
Comment 2
2015-06-11 01:31:22 PDT
Created
attachment 254713
[details]
Patch
KwangHyuk
Comment 3
2015-06-11 01:37:37 PDT
(In reply to
comment #2
)
> Created
attachment 254713
[details]
> Patch
Thank you, hunseop. ASSERT statement would be applied for debug build, but for release build. :(
WebKit Commit Bot
Comment 4
2015-06-11 02:31:29 PDT
Comment on
attachment 254713
[details]
Patch Clearing flags on attachment: 254713 Committed
r185451
: <
http://trac.webkit.org/changeset/185451
>
WebKit Commit Bot
Comment 5
2015-06-11 02:31:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug