[EFL] Fix the debug build after r185417. https://bugs.webkit.org/show_bug.cgi?id=145876

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2015-06-11
Reviewed by Gyuyoung Kim.

* platform/graphics/efl/ImageBufferEfl.cpp: added the missing "MIMETypeRegistry.h".

Canonical link: https://commits.webkit.org/163920@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185451 268f45cc-cd09-0410-ab3c-d52691b4dbfc